[project]
name = "google-reviews-scraper-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.35.1",
    "botocore~=1.35.99",
    "fastapi==0.104.1",
    "googletrans==4.0.2",
    "pydantic~=2.11.5",
    "pymongo==4.12.0",
    "seleniumbase>=4.34.9",
    "tqdm>=4.66.3",
    "uvicorn==0.24.0",
]
